apps/vm/bazarr-ext/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-signin: https://bazarr.${domain_wahoo_li:=wahoo.li}/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
    nginx.ingress.kubernetes.io/auth-url: http://ak-outpost-proxy-default.default.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: 7e8d8e06-b9e2-4dc6-a8fa-bb811e8e972b.cfargotunnel.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
  labels:
    ingress: cloudflare
  name: bazarr-external
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: bazarr.${domain_wahoo_li:=wahoo.li}
    http:
      paths:
      - backend:
          service:
            name: bazarr-nas
            port:
              number: 6767
        path: /
        pathType: Prefix
      - backend:
          service:
            name: ak-outpost-proxy-default
            port:
              number: 9000
        path: /outpost.goauthentik.io
        pathType: Prefix
  tls:
  - hosts:
    - bazarr.${domain_wahoo_li:=wahoo.li}
    secretName: tls-bazarr-ingress
